namespace TicketingSystem.Common.Events;

public enum EventType
{
    PaymentCompleted
}
